@@ -2,54 +2,59 @@ package com.anook.backend.guest.adapter.out.persistence;
 
 import com.anook.backend.guest.application.port.out.GuestRepositoryPort;
 import com.anook.backend.guest.domain.model.Guest;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
- * Guest 영속성 어댑터 — GuestRepositoryPort 구현체
- *
- * ✅ 도메인 모델만 반환 (JPA Entity 외부 노출 금지)
+ * Guest 영속성 어댑터 (Persistence Adapter)
  */
 @Component
-@RequiredArgsConstructor
 public class GuestPersistenceAdapter implements GuestRepositoryPort {
 
-    private final GuestJpaRepository jpaRepository;
+    private final GuestJpaRepository guestJpaRepository;
+
+    public GuestPersistenceAdapter(GuestJpaRepository guestJpaRepository) {
+        this.guestJpaRepository = guestJpaRepository;
+    }
 
     @Override
     public Guest save(Guest guest) {
         GuestJpaEntity entity = GuestJpaEntity.from(guest);
-        GuestJpaEntity saved = jpaRepository.save(entity);
-        return saved.toDomain();
+        return guestJpaRepository.save(entity).toDomain();
     }
 
     @Override
     public Optional<Guest> findById(Long id) {
-        return jpaRepository.findById(id).map(GuestJpaEntity::toDomain);
+        return guestJpaRepository.findById(id).map(GuestJpaEntity::toDomain);
     }
 
     @Override
     public Optional<Guest> findByRoomId(Long roomId) {
-        return jpaRepository.findByRoomId(roomId).map(GuestJpaEntity::toDomain);
+        return guestJpaRepository.findByRoomId(roomId).map(GuestJpaEntity::toDomain);
+    }
+
+    @Override
+    public Optional<Guest> findByAccessCode(String accessCode) {
+        return guestJpaRepository.findByAccessCode(accessCode).map(GuestJpaEntity::toDomain);
     }
 
     @Override
     public List<Guest> findAll() {
-        return jpaRepository.findAll().stream()
+        return guestJpaRepository.findAll().stream()
                 .map(GuestJpaEntity::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Long id) {
-        jpaRepository.deleteById(id);
+        guestJpaRepository.deleteById(id);
     }
 
     @Override
     public boolean existsByRoomId(Long roomId) {
-        return jpaRepository.existsByRoomId(roomId);
+        return guestJpaRepository.existsByRoomId(roomId);
     }
 }
